add hawaii to main link

--- a/main/index.html
+++ b/main/index.html
@@ -19,6 +19,9 @@
                 <h2>Trips</h2>
                 <ul>
                   <li>
+                    <a href="http://tinaandcarlton.com/hawaii">Hawaii</a>
+                  </li>
+                  <li>
                     <a href="http://tinaandcarlton.com/vietnam">Vietnam</a>
                   </li>
                 </ul>
