--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=http://tinaandcarlton.com/vietnam" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tina And Carlton</title>
   </head>
   <body>
     <h1>Tina And Carlton</h1>
-    <p><a href="http://tinaandcarlton.com/hawaii">Redirect</a></p>
+    <p><a href="">Redirect</a></p>
     <script>
       const newLocation = window.location.origin + "/hawaii";
       const a = document.querySelector('a');
